Perm Gen memory issues bug fix